--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -227,13 +227,18 @@ a:hover {
     left: 2rem;
     top: 2rem;
 }
+.cover__heading-left img{
+    width: 16.5rem;
+}
 
 @media screen and (min-width: 768px) {
     .cover__heading-left {
         left: 1.5rem;
         top: 0rem;
     }
-    
+    .cover__heading-left img{
+        width: 54rem;
+    }   
 }
 
 .cover__heading-right{
@@ -545,12 +550,9 @@ a:hover {
 
 
 .free01__container-button{
-    border-radius: 4rem;
     font-size: 2.1rem;
     color: #fff;
-    /* padding: 1rem 7rem; */
     position: relative;
-    background-color: #49C43D;
     width: 35rem;
     height: 8rem;
     margin-bottom: 2.7rem;
@@ -558,11 +560,9 @@ a:hover {
 
 @media screen and (min-width: 768px) {
     .free01__container-button{
-        border-radius: 6.5rem;
         font-size: 3.4rem;
         width: 100%;
         height: 13rem;
-        padding-top: 1.65rem;
         margin-bottom: 5rem;
     }
     
@@ -583,6 +583,16 @@ a:hover {
     transform: rotate(45deg);
     box-sizing: border-box;
 }
+@media screen and (min-width: 768px) {
+    .free01__container-button::after {
+        right: 6rem;
+        width: 2.5rem;
+        height: 2.5rem;
+        border-top: 0.4rem solid #fff;
+        border-right: 0.4rem solid #fff;
+    }
+    
+}
 
 .free01__container-button a{
     display: block;
@@ -591,8 +601,17 @@ a:hover {
     color: #fff;
     text-align: center;
     padding: 1rem 2rem;
+    background-color: #49C43D;
+    border-radius: 4rem;
     line-height: 1.33;
     letter-spacing: 0.21rem;
+}
+@media screen and (min-width: 768px) {
+    .free01__container-button a{
+        border-radius: 6.5rem;
+        padding: 2rem 1rem 1rem;
+    }
+    
 }
 
 .free01__container-content{
@@ -902,6 +921,9 @@ a:hover {
     
 }
 
+.point__item02-content-txt{
+    margin-bottom: 2rem;
+}
 
 .point__item02-content-body-txt{
     font-size: 2.3rem;
@@ -913,6 +935,10 @@ a:hover {
         margin-bottom: 2rem;
     }
     
+}
+
+.point__item02-content-parts-img img{
+    width: 10rem;
 }
 
 
@@ -1047,23 +1073,18 @@ a:hover {
 
 
 .free02__container-button{
-    border-radius: 4rem;
     font-size: 2.1rem;
     color: #fff;
-    /* padding: 1rem 7rem; */
     position: relative;
-    background-color: #49C43D;
     width: 35rem;
     height: 8rem;
     margin-bottom: 0rem;
 }
 @media screen and (min-width: 768px) {
     .free02__container-button{
-        border-radius: 6.5rem;
         font-size: 3.4rem;
         width: 100%;
         height: 13rem;
-        padding-top: 1.3rem;
         margin-bottom: 0rem;
     }
     
@@ -1085,6 +1106,16 @@ a:hover {
     transform: rotate(45deg);
     box-sizing: border-box;
 }
+@media screen and (min-width: 768px) {
+    .free02__container-button::after {
+        right: 6rem;
+        width: 2.5rem;
+        height: 2.5rem;
+        border-top: 0.4rem solid #fff;
+        border-right: 0.4rem solid #fff;
+    }
+    
+}
 
 .free02__container-button a{
     display: block;
@@ -1093,10 +1124,19 @@ a:hover {
     color: #fff;
     text-align: center;
     padding: 1rem 2rem;
+    background-color: #49C43D;
+    border-radius: 4rem;
     line-height: 1.33;
     letter-spacing: 0.21rem;
 }
 
+@media screen and (min-width: 768px) {
+    .free02__container-button a{
+        border-radius: 6.5rem;
+        padding: 2rem 1rem 1rem;
+    }
+    
+}
 
 
 
@@ -1238,34 +1278,64 @@ a:hover {
     
 }
 
-.course__item-content{
+.course__item01-content{
     padding: 1rem 1.5rem 2rem;
     font-size: 1.4rem;
     background-color: #fff;
 }
 @media screen and (min-width: 768px) {
-    .course__item-content{
+    .course__item01-content{
         padding: 1rem 1.9rem 2rem;
         font-size: 1.8rem;
         line-height: 1.5;
-        word-break: keep-all;
     }
     
 }
 
-.course__item-content p{
+.course__item02-content{
+    padding: 1rem 1.5rem 2rem;
+    font-size: 1.4rem;
+    background-color: #fff;
+}
+@media screen and (min-width: 768px) {
+    .course__item02-content{
+        padding: 1rem 1.9rem 2rem;
+        font-size: 1.8rem;
+        line-height: 1.5;
+        word-break: keep-all;
+
+    }
+    
+}
+
+.course__item01-content p{
     margin-bottom: 1rem;
 }
 @media screen and (min-width: 768px) {
-    .course__item-content p{
+    .course__item01-content p{
         text-align: left;
     }
     
 }
-.course__item-content img{
+.course__item01-content img{
     width: 31.1rem;
     height: 20.7rem;
 }
+
+.course__item02-content p{
+    margin-bottom: 1rem;
+}
+@media screen and (min-width: 768px) {
+    .course__item02-content p{
+        text-align: left;
+    }
+    
+}
+.course__item02-content img{
+    width: 31.1rem;
+    height: 20.7rem;
+}
+
 
 
 
@@ -1346,8 +1416,6 @@ a:hover {
 
 .slider__border{
     padding: 0 0.75rem;
-    /* width: 31rem; */
-    /* height: 20rem; */
     margin-bottom: 1.5rem;
 }
 .slider__content{
@@ -1369,7 +1437,9 @@ a:hover {
     background-color: #fff;
     display: flex;
     justify-content: space-between;
-    gap: 1.5rem;
+}
+.slider__content-lower img{
+    width: 8rem;
 }
 
 .slider__lower-txt-name{
@@ -1379,12 +1449,13 @@ a:hover {
 }
 
 .slider__lower-txt-comment{
-    font-size: 1.41rem;
+    font-size: 1.4rem;
     line-height: 1.5;
+    width: 17rem;
 } 
 @media screen and (min-width: 768px) {
     .slider__lower-txt-comment{
-        width: 18rem;
+        width: 17rem;
     }
     
 }
@@ -1456,23 +1527,18 @@ a:hover {
 
 
 .free03__container-button{
-    border-radius: 4rem;
     font-size: 2.1rem;
     color: #fff;
-    /* padding: 1rem 7rem; */
     position: relative;
-    background-color: #49C43D;
     width: 35rem;
     height: 8rem;
     margin-bottom: 0rem;
 }
 @media screen and (min-width: 768px) {
     .free03__container-button{
-        border-radius: 6.5rem;
         font-size: 3.4rem;
         width: 100%;
         height: 13rem;
-        padding-top: 1.1rem;
         margin-bottom: 0rem;
     }
     
@@ -1494,6 +1560,16 @@ a:hover {
     transform: rotate(45deg);
     box-sizing: border-box;
 }
+@media screen and (min-width: 768px) {
+    .free03__container-button::after {
+        width: 2.5rem;
+        height: 2.5rem;
+        right: 6rem;
+        border-top: 0.4rem solid #fff;
+        border-right: 0.4rem solid #fff;
+    }
+    
+}
 
 .free03__container-button a{
     display: block;
@@ -1502,8 +1578,18 @@ a:hover {
     color: #fff;
     text-align: center;
     padding: 1rem 2rem;
+    background-color: #49C43D;
+    border-radius: 4rem;
     line-height: 1.33;
     letter-spacing: 0.21rem;
+}
+
+@media screen and (min-width: 768px) {
+    .free03__container-button a{
+        border-radius: 6.5rem;
+        padding: 2rem 1rem 1rem;
+    }
+    
 }
 
 /* ----------------フッター---------------- */
