--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -80,11 +80,11 @@ a:hover {
     width: 100%;
     z-index: 1000;
     background-color: #fff;
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 1.2rem;
 }
 @media screen and (min-width: 768px) {
     .header {
-        padding: 2.1rem 2rem;
+        padding: 1.9rem 2rem;
         height: 9.2rem;
     }
     
@@ -105,7 +105,10 @@ a:hover {
 }
 .header__container-logo{
     height: 4rem;
-    width: 7rem;
+    width: 7.2rem;
+}
+.header__container-logo a{
+    display: block;
 }
 @media screen and (min-width: 768px) {
     .header__container-logo {
@@ -121,12 +124,13 @@ a:hover {
 }
 .header__container-button{
     display: flex;
-    padding: 0.5rem 0;
+    padding: 0.5rem 0rem 0.8rem;
     gap: 1rem;
 }
 @media screen and (min-width: 768px) {
     .header__container-button {
         gap: 2.1rem;
+        padding: 0;
     }
     
 }
@@ -135,17 +139,11 @@ a:hover {
     border-radius: 1.6rem;
     font-size: 1.2rem;
     color: #fff;
-    padding: 0.7rem;
-    padding-right: 2.5rem;
-    padding-left:1.3rem;
     position: relative;
 }
 @media screen and (min-width: 768px) {
     .header__container-button div a {
         font-size: 2.1rem;
-        padding: 1rem;
-        padding-right: 3.8rem;
-        padding-left: 2.2rem;
         border-radius: 2.5rem;
     }
     
@@ -154,8 +152,8 @@ a:hover {
 .header__container-button div a::after {
     content: '';
     position: absolute;
-    top: 0;
-    bottom: 0;
+    top: 0rem;
+    bottom: 0rem;
     right: 1rem;
     width: 0.7rem;
     height: 0.7rem;
@@ -167,17 +165,42 @@ a:hover {
 }
 @media screen and (min-width: 768px) {
     .header__container-button div a::after {
-        right: 1.5rem;
+        right: 1.9rem;
         width: 1rem;
         height: 1rem;
     }
     
 }
 .header__container-button-contact{
+    display: block;
     background-color: #FA7DA3;
+    padding: 0.3rem 2rem 0.5rem 1rem;
+    letter-spacing: 0.05em;
+    width: 10.7rem;    
+}
+@media screen and (min-width: 768px) {
+    .header__container-button-contact{
+        width: 18.91rem;
+        height: 5.036rem;
+        padding-top: 0.7rem;
+        padding-left: 2.5rem;
+        letter-spacing: 0em;
+    }
 }
 .header__container-button-reserve{
-    background-color: #49C43D ;
+    background-color: #49C43D;
+    display: block;
+    padding: 0.3rem 2rem 0.5rem 1rem;
+    letter-spacing: 0.05em;
+}
+@media screen and (min-width: 768px) {
+    .header__container-button-reserve{
+        width: 29.549rem;
+        height: 5.036rem;
+        padding-top: 0.6rem;
+        padding-left: 2.3rem;
+        letter-spacing: 0em;
+    }
 }
 .header__container-button-reserve span{
     font-size: 1rem;
@@ -206,26 +229,26 @@ a:hover {
 
 .cover__container{
     position: relative;
-    height: 31.3rem;
+    height: 31.4rem;
     background-image: url(/assets/image/main_visual.png);
-    background-size: 52%;
-    background-position: 0.7rem 9.8rem;
+    background-size: 53.5%;
+    background-position: 0.4rem 9.7rem;
 }
 
 @media screen and (min-width: 768px) {
     .cover__container {
         max-width: 102rem;
-        height: 61rem;
+        height: 61.2rem;
         margin-inline: auto;
-        background-size: 48%;
-        background-position: -0.3rem 11rem;
+        background-size: 47.8%;
+        background-position: -0.5rem 10.5rem;
     
 }}
 
 .cover__heading-left{
     position: absolute;
-    left: 2rem;
-    top: 2rem;
+    left: 1.9rem;
+    top: 2.1rem;
 }
 .cover__heading-left img{
     width: 16.5rem;
@@ -248,10 +271,10 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 49%;
-    height: 10.5rem;
+    width: 18.7rem;
+    height: 10.7rem;
     background-color: #FCA4BF;
-    padding: 3rem 2rem 2rem 3rem;
+    padding: 2.7rem 2.1rem 2rem 2.6rem;
     box-shadow: 4px 4px 0px #E77497;
 }
 @media screen and (min-width: 768px) {
@@ -259,7 +282,7 @@ a:hover {
         right: 2.5rem;
         width: 42.3rem;
         height: 22.2rem;
-        padding: 4rem 5.3rem 3.3rem 5.8rem;
+        padding: 4rem 5.3rem 3.3rem 6rem;
     }
     
 }
@@ -274,7 +297,7 @@ a:hover {
 }
 @media screen and (min-width: 768px) {
     .cover__heading-right-now{
-        font-size: 3rem;
+        font-size: 2.925rem;
         width: 10.5rem;
     }
     
@@ -313,7 +336,7 @@ a:hover {
 
 .cover__container-cost{
     position: absolute;
-    top: 11rem;
+    top: 11.1rem;
     right: 2.5rem;
 }
 @media screen and (min-width: 768px) {
@@ -352,7 +375,7 @@ a:hover {
 .cover__container-txt{
     position: absolute;
     top: 15.5rem;
-    right: 2.5rem;
+    right: 2.6rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -369,14 +392,17 @@ a:hover {
     margin-bottom: 1.2rem;
     border: 0.1rem solid #fff;
     width: 13.3rem;
+    height: 3.5rem;
 
 }
 @media screen and (min-width: 768px) {
     .cover__container-txt p {
         font-size: 2.8rem;
         width: 42.3rem;
-        margin-bottom: 1.7rem;
+        margin-bottom: 1.9rem;
         padding: 1rem;
+        height: 7rem;
+        letter-spacing: -0.05em;
     }
     
 }
@@ -384,7 +410,7 @@ a:hover {
 /* -----------------３回プレゼント！ -------------------*/
 .present{
     background-color: #FFFEDD ;
-    padding: 1.4rem 1.9rem;
+    padding: 1.6rem 1.9rem 1.4rem 2.1rem;
 }
 @media screen and (min-width: 768px) {
     .present {
@@ -401,11 +427,12 @@ a:hover {
 }
 
 .present__container-txt-now{
+    padding-right: 0.2rem;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2.1rem;
-    margin-bottom: 1.2rem;
+    margin-bottom: 0.8rem;
     color: #FA7DA3;
 }
 @media screen and (min-width: 768px) {
@@ -418,7 +445,7 @@ a:hover {
 
 .present__container-txt-now::before,.present__container-txt-now::after {
     width: 0.15rem;
-    height: 2.5rem;
+    height: 2.7rem;
     content: "";
     background-color: #FA7DA3;
 }
@@ -431,7 +458,7 @@ a:hover {
 }
 
 .present__container-txt-now::before {
-    margin-right: 1.2rem;
+    margin-right: 1.6rem;
     transform: rotate(-30deg);
 }
 @media screen and (min-width: 768px) {
@@ -442,7 +469,7 @@ a:hover {
 }
 
 .present__container-txt-now::after {
-    margin-left: 1.5rem;
+    margin-left: 1.3rem;
     transform: rotate(30deg);
 }
 @media screen and (min-width: 768px) {
@@ -460,6 +487,7 @@ a:hover {
     background-color: #FA7DA3;
     border-radius: 10px 10px 0px 0px;
     line-height: 1.5;
+    letter-spacing: 0.01em;
 }
 @media screen and (min-width: 768px) {
     .present__container-txt-course{
@@ -472,15 +500,17 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: baseline;
-    height: 6rem;
+    height: 6.2rem;
     font-size: 4.2rem;
     line-height: 5rem;
     text-align: center;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.6rem;
     color: #FA7DA3;
     background-color: #fff;
     border-radius: 0px 0px 10px 10px;
     border: 0.1rem solid #FA7DA3;
+    letter-spacing: 0.01em;
+    padding-top: 0.2rem;
 }
 @media screen and (min-width: 768px) {
     .present__container-txt-three{
@@ -503,6 +533,7 @@ a:hover {
 }
 
 .present__container-txt-content{
+    padding-right: 0.3rem;
     font-size: 1rem;
     text-align: center;
 }
@@ -515,7 +546,7 @@ a:hover {
 
 /* ----------------------無料体験実施中------------------ */
 .free01{
-    padding: 0.8rem 2rem 3rem;
+    padding: 1rem 2rem 3.5rem;
 }
 @media screen and (min-width: 768px) {
     .free01{
@@ -534,10 +565,10 @@ a:hover {
 .free01__container-heading{
     font-size: 2.1rem;
     letter-spacing: 0.1em;
-    transform: translate(0.5rem, 0);
+    padding-left: 1rem;
     color: #FA7DA3;
     text-align: center;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.6rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -555,7 +586,7 @@ a:hover {
     position: relative;
     width: 35rem;
     height: 8rem;
-    margin-bottom: 2.7rem;
+    margin-bottom: 2.8rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -574,7 +605,7 @@ a:hover {
     position: absolute;
     top: 0;
     bottom: 0;
-    right: 3rem;
+    right: 3.5rem;
     width: 1.5rem;
     height: 1.5rem;
     margin: auto;
@@ -600,10 +631,10 @@ a:hover {
     height: 100%;
     color: #fff;
     text-align: center;
-    padding: 1rem 2rem;
+    padding: 1.1rem 2rem 1rem;;
     background-color: #49C43D;
     border-radius: 4rem;
-    line-height: 1.33;
+    line-height: 1.35;
     letter-spacing: 0.21rem;
 }
 @media screen and (min-width: 768px) {
@@ -658,7 +689,7 @@ a:hover {
 /* -------------------３つのポイント------------------- */
 
 .point{
-    padding: 3.3rem 2rem 2.9rem;
+    padding: 2rem 2rem 2.9rem;
     background-color: #FDF0F5;
 }
 
@@ -687,9 +718,10 @@ a:hover {
 }
 
 .point__title-select{
+    display: block;
     text-align: center;
     font-size: 1.8rem;
-    margin-bottom: -0.5rem;
+    margin-bottom: 1rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -699,30 +731,15 @@ a:hover {
     
 }
 
-.point__title-select:before{
-    content: '';
-    margin-right:0.2rem;
-    display: inline-block;
-    background-image: url(/assets/image/kirameki_beauty_labo.png);
-    width: 20rem;
-    height: 2rem;
-    background-size: contain;
-    vertical-align: middle;
-}
-@media screen and (min-width: 768px) {
-    .point__title-select:before{
-        width: 26rem;
-        height: 3rem;
-    }
-    
-}
 
 .point__title-three{
+    display: block;
     font-size: 3.2rem;
     color:#FA7DA3;
     text-align: center;
-    margin-bottom: 1.9rem;
+    margin-bottom: 2.6rem;
     letter-spacing: 0.04em;
+    line-height: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -741,7 +758,7 @@ a:hover {
     width: 3.5rem;
     height: 4.2rem;
     background-size: contain;
-    vertical-align: -1rem;
+    vertical-align: -0.5rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -761,7 +778,7 @@ a:hover {
     width: 3.5rem;
     height: 4.2rem;
     background-size: contain;
-    vertical-align: -1rem;
+    vertical-align: -0.5rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -775,7 +792,7 @@ a:hover {
 
 .point__item01{
     border: 1px solid #FA7DA3;
-    border-radius: 10px;
+    border-radius: 1rem;
     margin-bottom: 3.2rem;
 }
 @media screen and (min-width: 768px) {
@@ -795,7 +812,8 @@ a:hover {
     text-align: center;
     background-color: #FA7DA3;
     padding: 0.7rem 0;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.03em;
+    border-radius: 1rem 1rem 0rem 0rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -808,10 +826,11 @@ a:hover {
 
 
 .point__item01-content{
-    padding: 1.5rem 1.9rem 1.6rem;
+    padding: 1.5rem 2rem 1.6rem;
     background-color: #fff;
     font-size: 1.4rem;
     line-height: 1.5;
+    border-radius: 0rem 0rem 1rem 1rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -826,7 +845,7 @@ a:hover {
 
 .point__item01-content-txt{
     font-size: 1.4rem;
-    letter-spacing: 0.04em;
+    letter-spacing: -0.035em;
     line-height: 1.5;
     margin-bottom: 1.2rem;
 }
@@ -865,7 +884,7 @@ a:hover {
 .point__item01-content-img img{
     width: 14.3rem;
     height: 8.5rem;
-    margin-bottom: 0.2rem;
+    margin-bottom: 0.5rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -880,7 +899,7 @@ a:hover {
 
 .point__item02{
     border: 1px solid #FA7DA3;
-    border-radius: 10px;
+    border-radius: 1rem;
     margin-bottom: 3rem;
 }
 @media screen and (min-width: 768px) {
@@ -896,7 +915,8 @@ a:hover {
     text-align: center;
     background-color: #FA7DA3;
     padding: 0.7rem 0;
-    letter-spacing: 0.05em;
+    letter-spacing: 0em;
+    border-radius: 1rem 1rem 0rem 0rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -907,10 +927,12 @@ a:hover {
     
 }
 .point__item02-content{
-    padding: 1.5rem 1.9rem 1.1rem;
+    padding: 1.3rem 1.4rem 1.1rem;
     background-color: #fff;
     font-size: 1.4rem;
     line-height: 1.5;
+    border-radius: 0rem 0rem 1rem 1rem;
+
 }
 @media screen and (min-width: 768px) {
     .point__item02-content{
@@ -923,6 +945,7 @@ a:hover {
 
 .point__item02-content-txt{
     margin-bottom: 2rem;
+    padding-left: 0.7rem;
 }
 
 .point__item02-content-body-txt{
@@ -962,7 +985,7 @@ a:hover {
 .point__item02-content-parts-txt{
     font-size: 2.3rem;
     text-align: center;
-    margin-bottom: 2.5rem;
+    margin-bottom: 2.3rem;
 }
 @media screen and (min-width: 768px) {
     .point__item02-content-parts-txt{
@@ -972,8 +995,11 @@ a:hover {
 }
 
 .point__item02-content-body{
-    margin-bottom: 4.5rem;
+    margin-bottom: 4.3rem;
     text-align: center;
+}
+.point__item02-content-body img{
+    width: 31.1rem;
 }
 @media screen and (min-width: 768px) {
     .point__item02-content-body{
@@ -983,6 +1009,7 @@ a:hover {
 
     .point__item02-content-body img{
         transform: translate(1rem, 0);
+        width: 53.3rem;
     }
 }
 
@@ -1008,7 +1035,9 @@ a:hover {
     text-align: center;
     background-color: #FA7DA3;
     padding: 0.7rem 0;
-    letter-spacing: 0.05em;
+    letter-spacing: 0em;
+    border-radius: 1rem 1rem 0rem 0rem;
+
 }
 
 @media screen and (min-width: 768px) {
@@ -1019,10 +1048,12 @@ a:hover {
 }
 
 .point__item03-content{
-    padding: 1.5rem 1.9rem 1.6rem;
+    padding: 1.5rem 1.9rem 1.8rem 2.1rem;
     background-color: #fff;
     font-size: 1.4rem;
     line-height: 1.5;
+    border-radius: 0rem 0rem 1rem 1rem;
+
 }
 
 @media screen and (min-width: 768px) {
@@ -1036,7 +1067,7 @@ a:hover {
 
 /*------------- 無料体験実施中 ---------------*/
 .free02{
-    padding: 2.5rem 2rem 2.3rem;
+    padding: 2.4rem 2rem 2.3rem;
 }
 @media screen and (min-width: 768px) {
     .free02{
@@ -1097,7 +1128,7 @@ a:hover {
     position: absolute;
     top: 0;
     bottom: 0;
-    right: 3rem;
+    right: 3.5rem;
     width: 1.5rem;
     height: 1.5rem;
     margin: auto;
@@ -1123,7 +1154,7 @@ a:hover {
     height: 100%;
     color: #fff;
     text-align: center;
-    padding: 1rem 2rem;
+    padding: 1.2rem 2rem 1rem;
     background-color: #49C43D;
     border-radius: 4rem;
     line-height: 1.33;
@@ -1143,7 +1174,7 @@ a:hover {
 /* ２つのコース */
 
 .course{
-    padding: 1.8rem 2rem 2rem;
+    padding: 1.9rem 2rem 2rem;
 }
 @media screen and (min-width: 768px) {
     .course{
@@ -1162,6 +1193,7 @@ a:hover {
 
 
 .course__title-others{
+    display: block;
     text-align: center;
     font-size: 1.8rem;
     margin-bottom: 0rem;
@@ -1176,6 +1208,7 @@ a:hover {
 }
 
 .course__title-two{
+    display: block;
     font-size: 3.2rem;
     color:#FA7DA3;
     text-align: center;
@@ -1198,7 +1231,7 @@ a:hover {
     width: 3.5rem;
     height: 4.2rem;
     background-size: contain;
-    vertical-align: -1rem;
+    vertical-align: -0.5rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -1218,7 +1251,7 @@ a:hover {
     width: 3.5rem;
     height: 4.2rem;
     background-size: contain;
-    vertical-align: -1rem;
+    vertical-align: -0.5rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -1240,7 +1273,7 @@ a:hover {
 
 .course__item01{
     border: 1px solid #FA7DA3;
-    border-radius: 10px;
+    border-radius: 1rem;
     margin-bottom: 3rem;
 }
 @media screen and (min-width: 768px) {
@@ -1253,7 +1286,7 @@ a:hover {
 
 .course__item02{
     border: 1px solid #FA7DA3;
-    border-radius: 10px;
+    border-radius: 1rem;
     margin-bottom: 0;
 }
 @media screen and (min-width: 768px) {
@@ -1269,6 +1302,7 @@ a:hover {
     text-align: center;
     background-color: #FDF0F5;
     padding: 0.6rem 0 0.6rem;
+    border-radius: 1rem 1rem 0rem 0rem;
 }
 @media screen and (min-width: 768px) {
     .course__item-title{
@@ -1279,9 +1313,10 @@ a:hover {
 }
 
 .course__item01-content{
-    padding: 1rem 1.5rem 2rem;
+    padding: 1.2rem 2rem 2rem 2.1rem;
     font-size: 1.4rem;
     background-color: #fff;
+    border-radius: 0rem 0rem 1rem 1rem;
 }
 @media screen and (min-width: 768px) {
     .course__item01-content{
@@ -1293,9 +1328,11 @@ a:hover {
 }
 
 .course__item02-content{
-    padding: 1rem 1.5rem 2rem;
+    padding: 1.5rem 2rem 2rem 2.1rem;
     font-size: 1.4rem;
     background-color: #fff;
+    border-radius: 0rem 0rem 1rem 1rem;
+
 }
 @media screen and (min-width: 768px) {
     .course__item02-content{
@@ -1310,6 +1347,7 @@ a:hover {
 
 .course__item01-content p{
     margin-bottom: 1rem;
+    line-height: 1.6;
 }
 @media screen and (min-width: 768px) {
     .course__item01-content p{
@@ -1324,6 +1362,7 @@ a:hover {
 
 .course__item02-content p{
     margin-bottom: 1rem;
+    line-height: 1.6;
 }
 @media screen and (min-width: 768px) {
     .course__item02-content p{
@@ -1342,7 +1381,7 @@ a:hover {
 /*----------------- お客様の声 ---------------*/
 .voice{
     background-color: #fdf0f5;
-    padding: 2rem 0 1.2rem;
+    padding: 2rem 0 0.9rem;
 }
 @media screen and (min-width: 768px) {
     .voice{
@@ -1363,7 +1402,7 @@ a:hover {
     font-size: 3.2rem;
     color:#FA7DA3;
     text-align: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.7rem;
 }
 @media screen and (min-width: 768px) {
     .voice__container-title{
@@ -1430,13 +1469,16 @@ a:hover {
     color: #fff;
     font-size: 1.8rem;
     padding: 0.7rem;
+    border-radius: 1rem 1rem 0rem 0rem;
 }
 
 .slider__content-lower{
-    padding: 1.2rem;
+    padding: 1.2rem 1.8rem;
     background-color: #fff;
     display: flex;
     justify-content: space-between;
+    border-radius: 0rem 0rem 1rem 1rem;
+
 }
 .slider__content-lower img{
     width: 8rem;
@@ -1514,7 +1556,7 @@ a:hover {
     transform: translate(0.5rem, 0);
     color: #FA7DA3;
     text-align: center;
-    margin-bottom: 0.4rem;
+    margin-bottom: 0.6rem;
 }
 @media screen and (min-width: 768px) {
     .free03__container-heading{
@@ -1551,7 +1593,7 @@ a:hover {
     position: absolute;
     top: 0;
     bottom: 0;
-    right: 3rem;
+    right: 3.5rem;
     width: 1.5rem;
     height: 1.5rem;
     margin: auto;
@@ -1577,7 +1619,7 @@ a:hover {
     height: 100%;
     color: #fff;
     text-align: center;
-    padding: 1rem 2rem;
+    padding: 1.2rem 2rem 1rem;
     background-color: #49C43D;
     border-radius: 4rem;
     line-height: 1.33;
