--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -80,7 +80,7 @@ a:hover {
     width: 100%;
     z-index: 1000;
     background-color: #fff;
-    padding: 1rem 1rem 1rem 1.2rem;
+    padding: 1rem 0rem 1rem 0.2rem;
 }
 @media screen and (min-width: 768px) {
     .header {
@@ -94,6 +94,8 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 36.8rem;
+    margin-inline: auto;
 }
 
 @media screen and (min-width: 768px) {
@@ -414,7 +416,7 @@ a:hover {
 }
 @media screen and (min-width: 768px) {
     .present {
-        padding: 3.5rem 2rem;
+        padding: 3.5rem 2rem 2.3rem;
     }
     
 }
@@ -434,11 +436,14 @@ a:hover {
     font-size: 2.1rem;
     margin-bottom: 0.8rem;
     color: #FA7DA3;
+    letter-spacing: -0.06em;
 }
 @media screen and (min-width: 768px) {
     .present__container-txt-now {
         font-size: 3.4rem;
         margin-bottom: 1rem;
+        letter-spacing: -0.05em;
+        padding-left: 0.6rem;
     }
     
 }
@@ -458,23 +463,23 @@ a:hover {
 }
 
 .present__container-txt-now::before {
-    margin-right: 1.6rem;
+    margin-right: 1.4rem;
     transform: rotate(-30deg);
 }
 @media screen and (min-width: 768px) {
     .present__container-txt-now::before {
-        margin-right: 1.8rem;
+        margin-right: 2.2rem;
     }
     
 }
 
 .present__container-txt-now::after {
-    margin-left: 1.3rem;
+    margin-left: 1.4rem;
     transform: rotate(30deg);
 }
 @media screen and (min-width: 768px) {
     .present__container-txt-now::after {
-        margin-left: 2rem;
+        margin-left: 2.2rem;
     }
     
 }
@@ -550,7 +555,7 @@ a:hover {
 }
 @media screen and (min-width: 768px) {
     .free01{
-        padding: 3.8rem 2rem 5rem;
+        padding: 4.8rem 1.8rem 5rem 2rem;
     }
     
 }
@@ -574,7 +579,9 @@ a:hover {
 @media screen and (min-width: 768px) {
     .free01__container-heading{
         font-size: 3.4rem;
-        margin-bottom: 0.5rem;
+        margin-bottom: 0.8rem;
+        padding-left: 1.7rem;
+
     }
     
 }
@@ -641,6 +648,8 @@ a:hover {
     .free01__container-button a{
         border-radius: 6.5rem;
         padding: 2rem 1rem 1rem;
+        letter-spacing: 0.1em;
+
     }
     
 }
@@ -696,7 +705,7 @@ a:hover {
 
 @media screen and (min-width: 768px) {
     .point{
-        padding: 5rem 2rem 6rem;
+        padding: 4rem 2rem 6rem;
 
     }
 
@@ -712,7 +721,7 @@ a:hover {
 @media screen and (min-width: 768px) {
     .point__title{
         padding-top: 0rem;
-        margin-bottom: 4rem;
+        margin-bottom: 5.8rem;
     }
     
 }
@@ -721,14 +730,16 @@ a:hover {
     display: block;
     text-align: center;
     font-size: 1.8rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.6rem;
 }
 
 @media screen and (min-width: 768px) {
     .point__title-select{
-        margin-bottom: 0rem;
+        margin-bottom: 2.6rem;
     }
-    
+    .point__title-select img{
+        width: 35.5rem;
+    }
 }
 
 
@@ -737,28 +748,30 @@ a:hover {
     font-size: 3.2rem;
     color:#FA7DA3;
     text-align: center;
-    margin-bottom: 2.6rem;
+    margin-bottom: 3rem;
     letter-spacing: 0.04em;
     line-height: 1;
+    position: relative;
 }
 
 @media screen and (min-width: 768px) {
     .point__title-three{
         font-size: 4.2rem;
         margin-bottom: 2.5rem;
+        letter-spacing: 0;
     }
     
 }
 
 .point__title-three:before{
     content: '';
-    margin-right:0.2rem;
-    display: inline-block;
     background-image: url(/assets/image/shine_left.png);
     width: 3.5rem;
     height: 4.2rem;
     background-size: contain;
-    vertical-align: -0.5rem;
+        position: absolute;
+        left: 3rem;
+        top: -0.4rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -766,19 +779,22 @@ a:hover {
         width: 4.5rem;
         height: 5.4rem;
         margin-right: 0.3rem;
+        left: 19.8rem;
+        top: -0.5rem;
     }
     
 }
 
 .point__title-three:after{
     content: '';
-    margin-left:0.1rem;
-    display: inline-block;
     background-image: url(/assets/image/shine_right.png);
     width: 3.5rem;
     height: 4.2rem;
     background-size: contain;
-    vertical-align: -0.5rem;
+    position: absolute;
+    right: 3rem;
+    top: -0.4rem;
+
 }
 
 @media screen and (min-width: 768px) {
@@ -786,6 +802,8 @@ a:hover {
         width: 4.5rem;
         height: 5.4rem;
         margin-left: 0.3rem;
+        right: 19.7rem;
+        top: -0.5rem;
     }
     
 }
@@ -835,7 +853,7 @@ a:hover {
 
 @media screen and (min-width: 768px) {
     .point__item01-content{
-        padding: 2.5rem 4rem 3.5rem;
+        padding: 2.3rem 4rem 3.5rem;
         font-size: 2.1rem;
         line-height: 1.6;
     }
@@ -845,15 +863,17 @@ a:hover {
 
 .point__item01-content-txt{
     font-size: 1.4rem;
-    letter-spacing: -0.035em;
+    letter-spacing: -0.05em;
     line-height: 1.5;
     margin-bottom: 1.2rem;
+    line-break: anywhere;
 }
 @media screen and (min-width: 768px) {
     .point__item01-content-txt{
         font-size: 2.1rem;
         line-height: 1.6;
-        margin-bottom: 2.5rem;
+        margin-bottom: 2.3rem;
+        letter-spacing: 0.01em;
     }
     
 }
@@ -891,7 +911,7 @@ a:hover {
     .point__item01-content-img img{
         width: 23.3rem;
         height: 13.5rem;
-        margin-bottom: 0.7rem;
+        margin-bottom: 1rem;
     }
     
 }
@@ -936,7 +956,7 @@ a:hover {
 }
 @media screen and (min-width: 768px) {
     .point__item02-content{
-        padding: 2.5rem 4rem 4rem;
+        padding: 2.5rem 3rem 3.7rem;
         font-size: 2.1rem;
         line-height: 1.6;
     }
@@ -946,6 +966,12 @@ a:hover {
 .point__item02-content-txt{
     margin-bottom: 2rem;
     padding-left: 0.7rem;
+}
+@media screen and (min-width: 768px) {
+    .point__item02-content-txt{
+letter-spacing: 0.01em;
+    }
+    
 }
 
 .point__item02-content-body-txt{
@@ -989,7 +1015,9 @@ a:hover {
 }
 @media screen and (min-width: 768px) {
     .point__item02-content-parts-txt{
-        margin-bottom: 2rem;
+        margin-bottom: 2.5rem;
+        letter-spacing: 0.04em;
+        padding-left: 0.3rem;
     }
     
 }
@@ -1004,12 +1032,13 @@ a:hover {
 @media screen and (min-width: 768px) {
     .point__item02-content-body{
         text-align: center;
-        margin-bottom: 5.2rem;
+        margin-bottom: 5rem;
     }
-
+.point__item02-content-body picture{
+    padding-left: 2.8rem;
+}
     .point__item02-content-body img{
-        transform: translate(1rem, 0);
-        width: 53.3rem;
+        width: 56rem;
     }
 }
 
@@ -1058,9 +1087,10 @@ a:hover {
 
 @media screen and (min-width: 768px) {
     .point__item03-content{
-        padding: 2.5rem 4rem 3.5rem;
+        padding: 2.5rem 4rem 2.6rem;
         font-size: 2.1rem;
         line-height: 1.6;
+        letter-spacing: 0.006em;
     }
     
 }
@@ -1071,7 +1101,7 @@ a:hover {
 }
 @media screen and (min-width: 768px) {
     .free02{
-        padding: 4rem 2rem 3.3rem;
+        padding: 4.9rem 2rem 3.3rem;
     }
     
 }
@@ -1079,7 +1109,7 @@ a:hover {
 
 @media screen and (min-width: 768px) {
     .free02__container{
-        max-width: 57.58rem;
+        max-width: 57.2rem;
         margin-inline: auto;
     }
     
@@ -1087,15 +1117,16 @@ a:hover {
 .free02__container-heading{
     font-size: 2.1rem;
     letter-spacing: 0.1em;
-    transform: translate(0.5rem, 0);
     color: #FA7DA3;
     text-align: center;
     margin-bottom: 0.4rem;
+    padding-left: 1rem;
 }
 @media screen and (min-width: 768px) {
     .free02__container-heading{
         font-size: 3.4rem;
         margin-bottom: 1rem;
+        padding-left: 1.7rem;
     }
     
 }
@@ -1139,9 +1170,9 @@ a:hover {
 }
 @media screen and (min-width: 768px) {
     .free02__container-button::after {
-        right: 6rem;
-        width: 2.5rem;
-        height: 2.5rem;
+        right: 5.5rem;
+        width: 2.3rem;
+        height: 2.3rem;
         border-top: 0.4rem solid #fff;
         border-right: 0.4rem solid #fff;
     }
@@ -1164,7 +1195,8 @@ a:hover {
 @media screen and (min-width: 768px) {
     .free02__container-button a{
         border-radius: 6.5rem;
-        padding: 2rem 1rem 1rem;
+        padding: 1.8rem 1rem 1rem;
+        letter-spacing: 0.1em;
     }
     
 }
@@ -1197,13 +1229,16 @@ a:hover {
     text-align: center;
     font-size: 1.8rem;
     margin-bottom: 0rem;
+    padding-right: 0.1rem;
 }
 @media screen and (min-width: 768px) {
     .course__title-others{
         font-size: 2.4rem;
         line-height: 1.55;
-        margin-bottom: 0.5rem;
-    }
+        margin-bottom: 0.2rem;
+        font-weight: 500;
+        letter-spacing: 0.03em;
+        padding-right: 0.1rem;  }
     
 }
 
@@ -1213,52 +1248,55 @@ a:hover {
     color:#FA7DA3;
     text-align: center;
     margin-bottom: 1.8rem;
+    position: relative;
 }
 
 @media screen and (min-width: 768px) {
     .course__title-two{
         font-size: 4.2rem;
-        margin-bottom: 2.7rem;
+        margin-bottom: 3.1rem;
     }
     
 }
 
 .course__title-two:before{
     content: '';
-    margin-right:1rem;
-    display: inline-block;
     background-image: url(/assets/image/shine_left.png);
     width: 3.5rem;
     height: 4.2rem;
     background-size: contain;
-    vertical-align: -0.5rem;
+    position: absolute;
+    left: 4.2rem;
+    top: 0.5rem;
 }
 
 @media screen and (min-width: 768px) {
     .course__title-two:before{
         width: 4.5rem;
         height: 5.4rem;
-        margin-right: 1.5rem;
+        left: 19rem;
+        top: 0.8rem;
     }
     
 }
 
 .course__title-two:after{
     content: '';
-    margin-left:1rem;
-    display: inline-block;
     background-image: url(/assets/image/shine_right.png);
     width: 3.5rem;
     height: 4.2rem;
     background-size: contain;
-    vertical-align: -0.5rem;
+    position: absolute;
+    right: 4.2rem;
+    top: 0.5rem;
 }
 
 @media screen and (min-width: 768px) {
     .course__title-two:after{
         width: 4.5rem;
         height: 5.4rem;
-        margin-left: 1.5rem;
+        right: 18.7rem;
+        top: 0.8rem;
     }
     
 }
@@ -1314,33 +1352,26 @@ a:hover {
 
 .course__item01-content{
     padding: 1.2rem 2rem 2rem 2.1rem;
-    font-size: 1.4rem;
     background-color: #fff;
     border-radius: 0rem 0rem 1rem 1rem;
 }
 @media screen and (min-width: 768px) {
     .course__item01-content{
-        padding: 1rem 1.9rem 2rem;
-        font-size: 1.8rem;
-        line-height: 1.5;
+        padding: 0.3rem 1.9rem 1.8rem;
+
     }
     
 }
 
 .course__item02-content{
     padding: 1.5rem 2rem 2rem 2.1rem;
-    font-size: 1.4rem;
     background-color: #fff;
     border-radius: 0rem 0rem 1rem 1rem;
 
 }
 @media screen and (min-width: 768px) {
     .course__item02-content{
-        padding: 1rem 1.9rem 2rem;
-        font-size: 1.8rem;
-        line-height: 1.5;
-        word-break: keep-all;
-
+        padding: 0.3rem 1.9rem 1.8rem;
     }
     
 }
@@ -1348,10 +1379,16 @@ a:hover {
 .course__item01-content p{
     margin-bottom: 1rem;
     line-height: 1.6;
+    font-size: 1.4rem;
+
 }
 @media screen and (min-width: 768px) {
     .course__item01-content p{
         text-align: left;
+        font-size: 1.8rem;
+        line-height: 1.5;
+        letter-spacing: 0.01em;
+        margin-bottom: 1.5rem;
     }
     
 }
@@ -1363,10 +1400,17 @@ a:hover {
 .course__item02-content p{
     margin-bottom: 1rem;
     line-height: 1.6;
+    font-size: 1.4rem;
+
 }
 @media screen and (min-width: 768px) {
     .course__item02-content p{
         text-align: left;
+        letter-spacing: 0.01em;
+        line-break: anywhere;
+        font-size: 1.8rem;
+        line-height: 1.5;
+        margin-bottom: 1.5rem;
     }
     
 }
@@ -1385,14 +1429,14 @@ a:hover {
 }
 @media screen and (min-width: 768px) {
     .voice{
-        padding: 3.5rem 2rem 4rem;
+        padding: 3.5rem 2rem 3.6rem;
     }
     
 }
 
 @media screen and (min-width: 768px) {
     .voice__container{
-        max-width: 102rem;
+        max-width: 97rem;
         margin-inline: auto;
     }
     
@@ -1403,52 +1447,56 @@ a:hover {
     color:#FA7DA3;
     text-align: center;
     margin-bottom: 1.7rem;
+    position: relative;
 }
 @media screen and (min-width: 768px) {
     .voice__container-title{
         font-size: 4.2rem;
-        margin-bottom: 2.5rem;
+        margin-bottom: 3.5rem;
     }
     
 }
 
 .voice__container-title:before{
     content: '';
-    margin-right:2rem;
-    display: inline-block;
     background-image: url(/assets/image/shine_left.png);
     width: 3.5rem;
     height: 4.2rem;
     background-size: contain;
-    vertical-align: -1rem;
+    position: absolute;
+    left: 6.2rem;
+    top: 1.1rem;
 }
 
 @media screen and (min-width: 768px) {
     .voice__container-title:before{
         width: 4.5rem;
         height: 5.4rem;
-        margin-right: 3rem;
+        top: 1.5rem;
+        left: 31rem;
     }
     
 }
 
 .voice__container-title:after{
     content: '';
-    margin-left:2rem;
-    display: inline-block;
     background-image: url(/assets/image/shine_right.png);
     width: 3.5rem;
     height: 4.2rem;
     background-size: contain;
-    vertical-align: -1rem;
+    position: absolute;
+    right: 6.2rem;
+    top: 1.1rem;
 }
 
 @media screen and (min-width: 768px) {
     .voice__container-title:after{
         width: 4.5rem;
         height: 5.4rem;
-        margin-left: 3rem;
+        top: 1.5rem;
+        right: 30.8rem;
     }
+    
     
 }
 
@@ -1480,6 +1528,12 @@ a:hover {
     border-radius: 0rem 0rem 1rem 1rem;
 
 }
+@media screen and (min-width: 768px) {
+    .slider__content-lower{
+        gap: 1.6rem;
+    }
+    
+}
 .slider__content-lower img{
     width: 8rem;
 }
@@ -1499,6 +1553,7 @@ a:hover {
     .slider__lower-txt-comment{
         width: 17rem;
     }
+ 
     
 }
 
@@ -1536,8 +1591,8 @@ a:hover {
 }
 @media screen and (min-width: 768px) {
     .free03{
-        padding: 5.2rem 2rem 3rem;
-        margin-bottom: 3.5rem;
+        padding: 4.7rem 2rem 3rem;
+        margin-bottom: 3.4rem;
     }
     
 }
@@ -1562,6 +1617,8 @@ a:hover {
     .free03__container-heading{
         font-size: 3.4rem;
         margin-bottom: 1rem;
+        padding-left: 0.5rem;
+
     }
     
 }
@@ -1582,6 +1639,7 @@ a:hover {
         width: 100%;
         height: 13rem;
         margin-bottom: 0rem;
+        padding-left: 0.4rem;
     }
     
 }
@@ -1630,6 +1688,7 @@ a:hover {
     .free03__container-button a{
         border-radius: 6.5rem;
         padding: 2rem 1rem 1rem;
+        letter-spacing: 0.1em;
     }
     
 }
@@ -1642,7 +1701,7 @@ footer{
 }
 @media screen and (min-width: 768px) {
     footer{
-        padding: 2.5rem 2rem 2.3rem;
+        padding: 2.8rem 2rem 2.3rem;
         text-align: center;
     }
     
